parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Offers.Manager/content/Views/Offers/_OrderDetails.cshtml.pp
<table class="table table-bordered">
    <thead>
        <tr>
            <th>Fasdf</th>
        </tr>
    </thead>
</table>